# disco_slam_copy

./: CMakeLists.txt  README.md  convert_all_rviz.py  convert_rviz.py  fix_imu.py  install_ros2_humble.sh  switch_ros_version.sh
config/: consistency_matrixgensui.clq.mtx  params_ue.yaml
include/: utility.h
install/: local_setup.sh  setup.sh
install/disco_slam/include/disco_slam/disco_slam/msg/: context_info.h  context_info.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/disco_slam/include/disco_slam/disco_slam/msg/detail/: cloud_info__functions.h  cloud_info__rosidl_typesupport_fastrtps_c.h  cloud_info__rosidl_typesupport_fastrtps_cpp.hpp  cloud_info__rosidl_typesupport_introspection_cpp.hpp  cloud_info__struct.h  cloud_info__traits.hpp  cloud_info__type_support.c  cloud_info__type_support.cpp  cloud_info__type_support.hpp  context_info__builder.hpp  context_info__functions.c  context_info__functions.h  context_info__type_support.cpp  context_info__type_support.h
install/disco_slam/lib/disco_slam/: disco_slam_featureExtraction  disco_slam_path_to_tum
install/disco_slam/local/lib/python3.10/dist-packages/disco_slam-1.0.0-py3.10.egg-info/: PKG-INFO
install/disco_slam/local/lib/python3.10/dist-packages/disco_slam/msg/: __init__.py  _cloud_info.py  _cloud_info_s.c
install/disco_slam/share/ament_index/resource_index/package_run_dependencies/: disco_slam
install/disco_slam/share/ament_index/resource_index/parent_prefix_path/: disco_slam
install/disco_slam/share/ament_index/resource_index/rosidl_interfaces/: disco_slam
install/disco_slam/share/disco_slam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/disco_slam/share/disco_slam/cmake/: ament_cmake_export_libraries-extras.cmake  disco_slamConfig.cmake  disco_slam__rosidl_typesupport_cppExport-noconfig.cmake  disco_slam__rosidl_typesupport_introspection_cExport.cmake  disco_slam__rosidl_typesupport_introspection_cppExport-noconfig.cmake  disco_slam__rosidl_typesupport_introspection_cppExport.cmake  export_disco_slam__rosidl_generator_cExport-noconfig.cmake  export_disco_slam__rosidl_generator_cExport.cmake  export_disco_slam__rosidl_generator_pyExport.cmake  export_disco_slam__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_disco_slam__rosidl_typesupport_fastrtps_cppExport.cmake
install/disco_slam/share/disco_slam/config/: consistency_matrixjackal2.clq.mtx  mapfusion_ue.yaml  params_ue.yaml
install/disco_slam/share/disco_slam/launch/: run.launch  run.launch.py  run_path_to_tum.launch
install/disco_slam/share/disco_slam/launch/include/config/: rviz1_ros2.rviz  rviz_ros2.rviz
install/disco_slam/share/disco_slam/msg/: CloudInfo.idl
launch/: run.launch  run.launch.py
launch/include/config/: rviz.rviz  rviz1_ros2.rviz  rviz2.rviz  rviz_ros2.rviz
log/: latest_build
msg/: ContextInfo.msg
src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  path_to_tum.cpp
src/DiSCo-SLAM/: mapFusion.cpp
src/DiSCo-SLAM/config/: mapfusion_ue.yaml
src/DiSCo-SLAM/third_parties/scanContext/: scanContext.cpp  scanContext.h
